{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 36,
  "lineage": "cefa2232-0415-dd76-b792-cb0f65472f47",
  "resources": [
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ts_aws_eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c219a58dce81427e",
            "association_id": "eipassoc-0f7090b6a243527d6",
            "domain": "vpc",
            "id": "eipalloc-0c219a58dce81427e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0845f69cd3d661a80",
            "private_dns": "ip-10-0-10-57.ec2.internal",
            "private_ip": "10.0.10.57",
            "public_dns": "ec2-52-201-12-89.compute-1.amazonaws.com",
            "public_ip": "52.201.12.89",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ts_aws_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:internet-gateway/igw-07d480075a750a1a8",
            "id": "igw-07d480075a750a1a8",
            "owner_id": "022644679627",
            "tags": {
              "Name": "ts igw"
            },
            "tags_all": {
              "Name": "ts igw"
            },
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ts_aws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c219a58dce81427e",
            "connectivity_type": "public",
            "id": "nat-0b7358204efb56067",
            "network_interface_id": "eni-0845f69cd3d661a80",
            "private_ip": "10.0.10.57",
            "public_ip": "52.201.12.89",
            "subnet_id": "subnet-050464769c5aca1e2",
            "tags": {
              "Name": "ts ngw"
            },
            "tags_all": {
              "Name": "ts ngw"
            }
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_eip.ts_aws_eip_nat",
            "module.ts_aws_vpc_hello_world.aws_internet_gateway.ts_aws_internet_gateway",
            "module.ts_aws_vpc_hello_world.aws_subnet.ts_aws_subnet_public_igw",
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route",
      "name": "ts_aws_route_private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021befad6738fd5831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7358204efb56067",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021befad6738fd583",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_eip.ts_aws_eip_nat",
            "module.ts_aws_vpc_hello_world.aws_internet_gateway.ts_aws_internet_gateway",
            "module.ts_aws_vpc_hello_world.aws_nat_gateway.ts_aws_nat_gateway",
            "module.ts_aws_vpc_hello_world.aws_route_table.ts_aws_route_table_private_ngw",
            "module.ts_aws_vpc_hello_world.aws_subnet.ts_aws_subnet_public_igw",
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route",
      "name": "ts_aws_route_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07d480075a750a1a8",
            "id": "r-rtb-0c3c0e1cefa3043fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3c0e1cefa3043fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_internet_gateway.ts_aws_internet_gateway",
            "module.ts_aws_vpc_hello_world.aws_route_table.ts_aws_route_table_public_igw",
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ts_aws_route_table_private_airgap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:route-table/rtb-06bb72ff70cd99699",
            "id": "rtb-06bb72ff70cd99699",
            "owner_id": "022644679627",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ts private airgap"
            },
            "tags_all": {
              "Name": "ts private airgap"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ts_aws_route_table_private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:route-table/rtb-021befad6738fd583",
            "id": "rtb-021befad6738fd583",
            "owner_id": "022644679627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7358204efb56067",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ts private ngw"
            },
            "tags_all": {
              "Name": "ts private ngw"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ts_aws_route_table_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:route-table/rtb-0c3c0e1cefa3043fb",
            "id": "rtb-0c3c0e1cefa3043fb",
            "owner_id": "022644679627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d480075a750a1a8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ts public igw"
            },
            "tags_all": {
              "Name": "ts public igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ts_aws_route_table_association_private_airgap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0b3e3db244a053",
            "route_table_id": "rtb-06bb72ff70cd99699",
            "subnet_id": "subnet-060bef91d14f2fbf0"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_route_table.ts_aws_route_table_private_airgap",
            "module.ts_aws_vpc_hello_world.aws_subnet.ts_aws_subnet_private_airgap",
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ts_aws_route_table_association_private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d98210453c484f",
            "route_table_id": "rtb-021befad6738fd583",
            "subnet_id": "subnet-09ec682f540a7911a"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_route_table.ts_aws_route_table_private_ngw",
            "module.ts_aws_vpc_hello_world.aws_subnet.ts_aws_subnet_private_ngw",
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ts_aws_route_table_association_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9f9a019d23ec3f5",
            "route_table_id": "rtb-0c3c0e1cefa3043fb",
            "subnet_id": "subnet-050464769c5aca1e2"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_route_table.ts_aws_route_table_public_igw",
            "module.ts_aws_vpc_hello_world.aws_subnet.ts_aws_subnet_public_igw",
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ts_aws_subnet_private_airgap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:subnet/subnet-060bef91d14f2fbf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060bef91d14f2fbf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022644679627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ts private airgap"
            },
            "tags_all": {
              "Name": "ts private airgap"
            },
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ts_aws_subnet_private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:subnet/subnet-09ec682f540a7911a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec682f540a7911a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022644679627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ts private ngw"
            },
            "tags_all": {
              "Name": "ts private ngw"
            },
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ts_aws_subnet_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:subnet/subnet-050464769c5aca1e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050464769c5aca1e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022644679627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ts public igw"
            },
            "tags_all": {
              "Name": "ts public igw"
            },
            "vpc_id": "vpc-052e2592145d70be3"
          },
          "dependencies": [
            "module.ts_aws_vpc_hello_world.aws_vpc.ts_aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ts_aws_vpc_hello_world",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ts_aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022644679627:vpc/vpc-052e2592145d70be3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0085c2428c34f5b07",
            "default_route_table_id": "rtb-01f24c05349d81cff",
            "default_security_group_id": "sg-0906f29731a48f843",
            "dhcp_options_id": "dopt-07368e2965f8891f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-052e2592145d70be3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f24c05349d81cff",
            "owner_id": "022644679627",
            "tags": {
              "Name": "ts_vpc"
            },
            "tags_all": {
              "Name": "ts_vpc"
            }
          }
        }
      ]
    }
  ]
}